feat: CSSのログファイルをGit管理対象から除外

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+app/public/wp-content/themes/engress/css/*.log
 app/public/wp-content/cache/*
 app/public/wp-content/uploads/*
 app/public/wp-content/languages/*
