--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ app/public/wp-content/cache/*
 app/public/wp-content/uploads/*
 app/public/wp-content/languages/*
 app/public/wp-content/plugins/*
+app/public/wp-content/ai1wm-backups/*
 app/sql/local.sql
 logs/*
